Tue Dec  3 12:17:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/constant.rb (RDoc::Constant#documented?): workaround for
	  NoMethodError when the original of alias is not found.

Tue Dec  3 10:43:58 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/lib/openssl/buffering.rb:  Return ASCII-8BIT strings from
	  SSLSocket methods.  [ruby-trunk - Bug #9028]
	* test/openssl/test_ssl.rb:  Test for the above.

Tue Dec  3 09:42:27 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc master 900de99.  Changes include:

	  Fixed documentation display of constants

	  Fixed handling of unknown parsers

	* test/rdoc:  ditto.

Mon Dec  2 22:30:10 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (getenv): fixed test failures introduced by r43950.
	  [ruby-core:58774] [Bug #9195] reported by phasis68 (Heesob Park).

Mon Dec  2 21:49:19 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_rehash): make temporary st_table under the control
	  of GC. [Bug #9187]

	* test/ruby/test_hash.rb: add a test for above.

Mon Dec  2 17:23:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* variable.c (rb_mod_constants): when calling Module#constants with
	  inherit=false, there is no need to use a hashtable to deduplicate
	  constant names. [Feature #9196] [ruby-core:58786]

Mon Dec  2 14:16:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/net/smtp.rb (Net::SMTP#critical):  Always return a
	  Net::SMTP::Response.  Patch by Pawel Veselov.
	  [ruby-trunk - Bug #9125]
	* test/net/smtp/test_smtp.rb:  Test for the above.

Mon Dec  2 05:52:33 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master baa965b.  Notable changes:

	  Copy directories to lib/ when installing extensions.  This completes
	  the fix for [ruby-trunk - Bug #9106]

	* test/rubygems:  ditto.

Mon Dec  2 02:03:47 2013  Shota Fukumori  <her@sorah.jp>

	* test/ruby/test_case.rb (test_nomethoderror):